--- a/src/app/modules/services/components/usability-testing/usability-testing.component.html
+++ b/src/app/modules/services/components/usability-testing/usability-testing.component.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-6 left-layout">
                 <div class="container">
-                    <h3>A product with good User Experience will Improve Productivity drastically</h3>
+                    <h3>Way it be a software or physical product we cover a broad spectrum to test and validate the efficiency and effectiveness of the product</h3>
                 </div>
             </div>
             <div class="col-md-6 right-layout">
