--- a/src/app/modules/work/components/uxahead/uxahead.component.html
+++ b/src/app/modules/work/components/uxahead/uxahead.component.html
@@ -1,18 +1,20 @@
 <div class="works">
     <div class="banner">
+        <div class="container">
             <div class="row">
                 <div class="col-md-4 ordertwo">
-                    <div class="container">
                     <div class="banner-header">
                         <h2>Website for Startup</h2>
                         <h6>UX <span>. UI .</span><span> B2C</span></h6>
                     </div>
+                </div>
+                <div class="col-md-7 orderone">
+                    <div class="container">
+                        <img src="./assets/images/works/uxahead 1.png">
                     </div>
                 </div>
-                <div class="col-md-8 orderone">
-                    <img src="./assets/images/works/uxahead 1.png">
-                </div>
             </div>
+        </div>
     </div>
     <div class="about-project">
         <div class="row">
@@ -23,7 +25,7 @@
             </div>
             <div class="col-md-8">
                 <div class="container">
-                    <p>UXAHEAD is a design studio based out of London, they expertise in creating seamless customer experience for online business and also for businesses with physical presence. Services they offer are Branding, Digital Marketing Strategy, Development and Online Reputation Management.</p>
+                   <p>UXAHEAD is a design studio based out of London, they expertise in creating seamless customer experience for online business and also for businesses with physical presence. Services they offer are Branding, Digital Marketing Strategy, Development and Online Reputation Management.</p>
                 </div>
             </div>
         </div>
@@ -34,9 +36,13 @@
     <div class="approach">
         <div class="container">
             <div class="row">
-                <div class="col-md-9">
+                <div class="col-md-3">
                     <h2>Approach</h2>
-                    <p>Our goal was to communicate all of the mentioned things to their clients who are businesses that deal with the end customers of the service or the product</p>
+                </div>
+                <div class="col-md-7">
+                    <div class="container">
+                        <p>Our goal was to communicate all of the mentioned things to their clients who are businesses that deal with the end customers of the service or the product</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -48,7 +54,7 @@
                     <div class="col-md-4">
                         <h6>Target Audience</h6>
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-7">
                         <p>Local businesses, Professional Consultants, Online business, Design Team, Store Shops.</p>
                     </div>
                 </div>
@@ -67,7 +73,14 @@
         </div>
     </div>
     <div class="image-event">
-        <img src="./assets/images/works/uxahead 4.png">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <h6>Wireframes</h6>
+            </div>
+       </div>
+    </div>
+        <img src="./assets/images/works/uxahead 3.png">
     </div>
     <div class="research">
         <div class="container">
@@ -80,11 +93,16 @@
             </div>
         </div>
     </div>
+    <div class="image-event">
+        <img src="./assets/images/works/uxahead 4.png">
+    </div>
     <div class="work-description">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <h6>Logo Story</h6>
+                    <h5>Logo Story</h5>
+                    <h6>Rebranding to match with 
+                        the vision of the business</h6>
                     <p>The primary goal of the branding exercise was to create an identity that shows focus and progress. For which we started with the kickoff discussion about the vision of the brand. There after going about creating the Moodboard for inspiration, brainstorming and design direction. Our process helped us to come up with multiple variations for the 'Jewel' in the combination mark and to pick the right typeface and colour family for the brand.</p>
                 </div>
                 <div class="col-md-6">
@@ -96,18 +114,37 @@
     <div class="typography-image">
         <img src="./assets/images/works/uxahead 6.png">
     </div>
-    <div class="typography-image">
+    <!--<div class="typography-image">
         <img src="./assets/images/works/uxahead 3.png">
-    </div>
-     <div class="typography-image">
+    </div>-->
+     <div class="typography-image image-event">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Style Guide</h6>
+                </div>
+           </div>
+        </div>
         <img src="./assets/images/works/uxahead 7.png">
     </div>
-    <h6 class="text-center"> Illustrations</h6>
-    <div class="typography-image">
+    <div class="typography-image image-event">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Illustrations</h6>
+                </div>
+           </div>
+        </div>
         <img src="./assets/images/works/uxahead 8.png">
     </div>
-    <h6 class="text-center">Business Card</h6>
-    <div class="typography-image">
+    <div class="typography-image image-event">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h6>Business Card</h6>
+                </div>
+           </div>
+        </div>
         <img src="./assets/images/works/uxahead 9.png">
     </div>
     <div class="other-case-studies">
@@ -115,7 +152,7 @@
             <div class="col-md-6 left">
                 <h2>Other Case Studies</h2>
                 <div class="button">
-                    <div class="btn">See All Works <img src="./assets/images/rightarrow-red.svg"></div>
+                    <div class="btn btnn">See All Works</div>
                 </div>
             </div>
             <div class="col-md-6 right">
@@ -138,4 +175,16 @@
             </div>
         </div>
     </div>
+    <div class="craft">
+        <div class="container">
+          <div class="row">
+             <div class="col-md-4">
+             <h2>Let's craft design together!</h2>
+          </div>
+             <div class="button">
+                 <div class="btn-white">Let's Talk</div>
+             </div>
+        </div>
+        </div>
+     </div>
 </div>
