--- a/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
+++ b/src/app/modules/services/components/end-to-end-development/end-to-end-development.component.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-md-6 left-layout">
                 <div class="container">
-                    <h3>A product with good User Experience will Improve Productivity drastically</h3>
+                    <h3>One stop solution for all programming needs covering Database design till testing and execution</h3>
                 </div>
             </div>
             <div class="col-md-6 right-layout">
