--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -204,11 +204,21 @@
         list-style-type: none;
         font-size: 28px;
         cursor: pointer;
-        img{
+        svg{
             margin-right: 10px;
-            &:active{
-                color: #C3343C;
-            }
+        }
+    }
+    .list{
+        padding: 30px;
+        img{
+            width: 50px;
+        }
+        h6{
+            font-size: 16px;
+            line-height: 32px;
+            font-weight: 300;
+            padding-top: 10px;
+            font-family: Muli;
         }
     }
     h2{
@@ -220,6 +230,10 @@
         line-height: 30px;
         margin-top: 40px;
         font-family: Muli;
+    }
+    .nav-pills{
+        width: 150%;
+        margin-top: -80px;
     }
     .li{
         font-size: 16px;
@@ -248,6 +262,19 @@
     .service-layout3-responsive{
         margin: 100px 0;
         display: block;
+        .list{
+            padding: 30px;
+            img{
+                width: 50px;
+            }
+            h6{
+                font-size: 16px;
+                line-height: 32px;
+                font-weight: 300;
+                padding-top: 10px;
+                font-family: Muli;
+            }
+        }
         .card{
             background-color: #FFFFFF !important;
         }
@@ -292,6 +319,7 @@
                 font-size: 16px;
                 margin-top: 6px;
             }
+            
         }
     }
 }
@@ -307,6 +335,7 @@
 }
 .nav-pills{
     width: 150%;
+    //margin-top: -80px;
 }
 .tab-content{
     width: 200%;
